added form field validations

--- a/src/pages/certification-detail/certification-detail.html
+++ b/src/pages/certification-detail/certification-detail.html
@@ -10,28 +10,60 @@
 
 <ion-content padding class="app-background">
 
-  <form (ngSubmit)="processForm()">
+  <form (ngSubmit)="processForm()" [formGroup]="formGroup">
     <ion-item>
       <ion-label stacked class="form-label">Instituion Name</ion-label>
-      <ion-input class="editable-field" type="text" [(ngModel)]="obj.institution_name" name="institution_name" placeholder="Institution Name"></ion-input>
+      <ion-input
+        class="editable-field"
+        type="text"
+        [(ngModel)]="obj.institution_name"
+        formControlName="institution_name"
+        name="institution_name"
+        placeholder="Institution Name"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Certification Name</ion-label>
-      <ion-input class="editable-field" type="text" [(ngModel)]="obj.certification_name" name="certification_name" placeholder="Certification Name"></ion-input>
+      <ion-input
+        class="editable-field"
+        type="text"
+        [(ngModel)]="obj.certification_name"
+        formControlName="certification_name"
+        name="certification_name"
+        placeholder="Certification Name"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Date Received</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.date_received" name="date_received"></ion-datetime>
+      <ion-datetime
+        class="editable-field"
+        displayFormat="MMMM D, YYYY"
+        [(ngModel)]="obj.date_received"
+        formControlName="date_received"
+        name="date_received"></ion-datetime>
     </ion-item>
     <ion-item>
-      <ion-label stacked class="form-label">Expire Date</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.expire_date" name="expire_date"></ion-datetime>
+      <ion-label stacked class="form-label">Expire Date (optional)</ion-label>
+      <ion-datetime
+        class="editable-field"
+        displayFormat="MMMM D, YYYY"
+        [(ngModel)]="obj.expire_date"
+        formControlName="expire_date"
+        name="expire_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Description</ion-label>
-      <ion-textarea class="editable-field" class="description" [(ngModel)]="obj.description" name="description" placeholder="Optional: provide us with a few sentences about this certification."></ion-textarea>
+      <ion-textarea
+        class="editable-field"
+        class="description"
+        [(ngModel)]="obj.description"
+        formControlName="description"
+        name="description"
+        placeholder="Optional: provide us with a few sentences about this certification."></ion-textarea>
     </ion-item>
-    <button ion-button type="submit" block>Save</button>
+    <button
+      ion-button
+      type="submit"
+      block
+      [disabled]="!formGroup.valid">Save</button>
   </form>
 
 </ion-content>
