added form field validations

--- a/src/pages/jobhistory-detail/jobhistory-detail.html
+++ b/src/pages/jobhistory-detail/jobhistory-detail.html
@@ -9,36 +9,81 @@
 
 <ion-content padding class="app-background">
 
-  <form (ngSubmit)="processForm()">
+  <form (ngSubmit)="processForm()" [formGroup]="formGroup">
     <ion-item>
       <ion-label stacked class="form-label">Company Name</ion-label>
-      <ion-input class="editable-field" type="text" [(ngModel)]="obj.company_name" name="company_name" placeholder="Company Name"></ion-input>
+      <ion-input
+        class="editable-field"
+        type="text"
+        [(ngModel)]="obj.company_name"
+        formControlName="company_name"
+        name="company_name"
+        placeholder="Company Name"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Department</ion-label>
-      <ion-input class="editable-field" type="text" [(ngModel)]="obj.department" name="department" placeholder="Optional: department/division"></ion-input>
+      <ion-input
+        class="editable-field"
+        type="text"
+        [(ngModel)]="obj.department"
+        formControlName="department"
+        name="department"
+        placeholder="Optional: department/division"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Job Title</ion-label>
-      <ion-input class="editable-field" type="text" [(ngModel)]="obj.job_title" name="job_title" placeholder="Final job title"></ion-input>
+      <ion-input
+        class="editable-field"
+        type="text"
+        [(ngModel)]="obj.job_title"
+        formControlName="job_title"
+        name="job_title"
+        placeholder="Final job title"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Start Date</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.start_date" name="start_date"></ion-datetime>
+      <ion-datetime
+        class="editable-field"
+        displayFormat="MMMM D, YYYY"
+        [(ngModel)]="obj.start_date"
+        formControlName="start_date"
+        name="start_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">End Date</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.end_date" name="end_date"></ion-datetime>
+      <ion-datetime
+        class="editable-field"
+        displayFormat="MMMM D, YYYY"
+        [(ngModel)]="obj.end_date"
+        formControlName="end_date"
+        name="end_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Final Salary</ion-label>
-      <ion-input class="editable-field" type="number" [(ngModel)]="obj.final_salary" name="final_salary" placeholder="Optional: your final salary" min=0></ion-input>
+      <ion-input
+        class="editable-field"
+        type="number"
+        [(ngModel)]="obj.final_salary"
+        formControlName="final_salary"
+        name="final_salary"
+        placeholder="Optional: your final salary"
+        min=0></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Description</ion-label>
-      <ion-textarea class="editable-field" class="description" [(ngModel)]="obj.description" name="description" placeholder="Optional: provide us with a few sentences about your role and responsibilities for this position."></ion-textarea>
+      <ion-textarea
+        class="editable-field"
+        class="description"
+        [(ngModel)]="obj.description"
+        formControlName="description"
+        name="description"
+        placeholder="Optional: provide us with a few sentences about your role and responsibilities for this position."></ion-textarea>
     </ion-item>
-    <button ion-button type="submit" block>Save</button>
+    <button
+      ion-button
+      type="submit" 
+      block
+      [disabled]="!formGroup.valid">Save</button>
   </form>
 
 </ion-content>
