added form field validations

--- a/src/pages/education-detail/education-detail.html
+++ b/src/pages/education-detail/education-detail.html
@@ -9,32 +9,67 @@
 
 <ion-content padding class="app-background">
 
-  <form (ngSubmit)="processForm()">
+  <form (ngSubmit)="processForm()" [formGroup]="formGroup">
     <ion-item>
       <ion-label stacked class="form-label">Instituion Name</ion-label>
-      <ion-input class="editable-field" type="text" [(ngModel)]="obj.institution_name" name="institution_name" placeholder="Institution Name"></ion-input>
+      <ion-input
+        class="editable-field"
+        type="text"
+        [(ngModel)]="obj.institution_name"
+        formControlName="institution_name"
+        name="institution_name"
+        placeholder="Institution Name"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Degree Earned</ion-label>
-      <ion-input class="editable-field" type="text" [(ngModel)]="obj.degree" name="degree" placeholder="Degree"></ion-input>
+      <ion-input
+        class="editable-field"
+        type="text"
+        [(ngModel)]="obj.degree"
+        formControlName="degree"
+        name="degree"
+        placeholder="Degree"></ion-input>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Graduated - {{ graduated }}</ion-label>
-      <ion-checkbox class="editable-field" [(ngModel)]="graduated" name="graduated"></ion-checkbox>
+      <ion-checkbox
+        class="editable-field"
+        [(ngModel)]="graduated"
+        formControlName="graduated"
+        name="graduated"></ion-checkbox>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Start Date</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.start_date" name="start_date"></ion-datetime>
+      <ion-datetime
+        class="editable-field"
+        displayFormat="MMMM D, YYYY"
+        [(ngModel)]="obj.start_date"
+        formControlName="start_date"
+        name="start_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">End Date</ion-label>
-      <ion-datetime class="editable-field" displayFormat="MMMM D, YYYY" [(ngModel)]="obj.end_date" name="end_date"></ion-datetime>
+      <ion-datetime
+        class="editable-field"
+        displayFormat="MMMM D, YYYY"
+        [(ngModel)]="obj.end_date"
+        formControlName="end_date"
+        name="end_date"></ion-datetime>
     </ion-item>
     <ion-item>
       <ion-label stacked class="form-label">Description</ion-label>
-      <ion-textarea class="editable-field" class="description" [(ngModel)]="obj.description" name="description" placeholder="Optional: provide us with a few sentences about this degree program."></ion-textarea>
+      <ion-textarea
+        class="editable-field description"
+        [(ngModel)]="obj.description"
+        formControlName="description"
+        name="description"
+        placeholder="Optional: provide us with a few sentences about this degree program."></ion-textarea>
     </ion-item>
-    <button ion-button type="submit" block>Save</button>
+    <button
+      ion-button
+      type="submit"
+      block
+      [disabled]="!formGroup.valid">Save</button>
   </form>
 
 </ion-content>
