added form field validations

--- a/src/pages/password-change/password-change.html
+++ b/src/pages/password-change/password-change.html
@@ -16,9 +16,13 @@
     <strong><p class="error-message" *ngIf="errMsg" >{{errMsg}}</p></strong>
     <ion-list style="margin-top: 40%;">
       <ion-item>
-        <ion-label floating>Current Password</ion-label>
+        <ion-label floating>
+          Current Password
+          <ion-icon name="checkmark" *ngIf="formGroup.controls.currentPassword.valid" class="valid"></ion-icon>
+        </ion-label>
         <ion-input
           required
+          [class.valid]="formGroup.controls.currentPassword.valid"
           [(ngModel)]="currentPassword"
           formControlName="currentPassword"
           type="password"
@@ -28,9 +32,13 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>New Password</ion-label>
+        <ion-label floating>
+          New Password
+          <ion-icon name="checkmark" *ngIf="formGroup.controls.newPassword.valid && newPassword == ReenterNewPassword" class="valid"></ion-icon>
+        </ion-label>
         <ion-input
           required
+          [class.valid]="formGroup.controls.newPassword.valid && newPassword == ReenterNewPassword"
           [(ngModel)]="newPassword"
           formControlName="newPassword"
           type="password"
@@ -40,9 +48,13 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>Re-enter New Password</ion-label>
+        <ion-label floating>
+          Re-enter New Password
+          <ion-icon name="checkmark" *ngIf="formGroup.controls.ReenterNewPassword.valid && newPassword == ReenterNewPassword" class="valid"></ion-icon>
+        </ion-label>
         <ion-input
             required
+            [class.valid]="formGroup.controls.ReenterNewPassword.valid && newPassword == ReenterNewPassword"
             [(ngModel)]="ReenterNewPassword"
             formControlName="ReenterNewPassword"
             type="password"
