alternative image paths for IonView

--- a/src/pages/delete-account/delete-account.html
+++ b/src/pages/delete-account/delete-account.html
@@ -27,7 +27,7 @@
         <h4><strong>To confirm, please press the button below.</strong></h4>
         <ion-list>
           <div padding>
-            <button ion-button color="danger" block class="close-button">Permanently Delete My Account</button>
+            <button ion-button color="danger" block class="close-button">Delete My Account</button>
           </div>
         </ion-list>
       </form>
