cleaned up treatment of null dates in api and front-end

--- a/src/pages/certifications/certifications.html
+++ b/src/pages/certifications/certifications.html
@@ -56,15 +56,15 @@
                 <p>Date Received</p>
               </ion-col>
               <ion-col text-right>
-                <p>{{ card.date_received.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
+                <p>{{ card.date_received | date:"MMM dd, yyyy" }}</p>
               </ion-col>
             </ion-row>
-            <ion-row>
+            <ion-row *ngIf="card.expire_date">
               <ion-col text-left>
                 <p>Expiration Date</p>
               </ion-col>
               <ion-col text-right>
-                <p>{{ card.expire_date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
+                <p>{{ card.expire_date | date:"MMM dd, yyyy" }}</p>
               </ion-col>
             </ion-row>
           </ion-item>
