--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -55,15 +55,15 @@
                 <p>Start Date</p>
               </ion-col>
               <ion-col text-right>
-                <p>{{ card.start_date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
+                <p>{{ card.start_date | date:"MMM dd, yyyy" }}</p>
               </ion-col>
             </ion-row>
-            <ion-row>
+            <ion-row *ngIf="card.end_date">
               <ion-col text-left>
                 <p>End Date</p>
               </ion-col>
               <ion-col text-right>
-                <p>{{ card.end_date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
+                <p>{{ card.end_date | date:"MMM dd, yyyy" }}</p>
               </ion-col>
             </ion-row>
           </ion-item>
