relocated image assets

--- a/src/pages/http-error/http-error.html
+++ b/src/pages/http-error/http-error.html
@@ -1,7 +1,7 @@
 <ion-content  padding class="app-background">
   <form (submit)="retryButtonClick()">
     <div text-center class="logo">
-      <img src="../../assets/error_cloud_filled.png" width="50%"/>
+      <img src="assets/img/error_cloud_filled.png" width="50%"/>
     </div>
 
     <div class="error-message">
