--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -6,7 +6,7 @@
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="assets/agility360-logo-transparent-512x512.png" />
+            <img src="assets/img/agility360-logo-transparent-512x512.png" />
           </div>
         </ion-card-header>
         <ion-card-content>
@@ -14,14 +14,14 @@
         </ion-card-content>
 
       </ion-card>
-      <img src="assets/arrow-right.png" class="right-arrow" />
+      <img src="assets/img/arrow-right.png" class="right-arrow" />
 
     </ion-slide>
     <ion-slide>
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="assets/agility360-logo-transparent-512x512.png" />
+            <img src="assets/img/agility360-logo-transparent-512x512.png" />
           </div>
         </ion-card-header>
         <ion-card-content>
@@ -29,13 +29,13 @@
           <p>shooby dooby do</p>
         </ion-card-content>
       </ion-card>
-      <img src="assets/arrow-right.png" class="right-arrow" />
+      <img src="assets/img/arrow-right.png" class="right-arrow" />
     </ion-slide>
     <ion-slide>
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="assets/agility360-logo-transparent-512x512.png" />
+            <img src="assets/img/agility360-logo-transparent-512x512.png" />
           </div>
         </ion-card-header>
         <ion-card-content>
@@ -43,13 +43,13 @@
           <p>shooby dooby do</p>
         </ion-card-content>
       </ion-card>
-      <img src="assets/arrow-right.png" class="right-arrow" />
+      <img src="assets/img/arrow-right.png" class="right-arrow" />
     </ion-slide>
     <ion-slide>
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="assets/agility360-logo-transparent-512x512.png" />
+            <img src="assets/img/agility360-logo-transparent-512x512.png" />
           </div>
         </ion-card-header>
         <ion-card-content>
