--- a/src/pages/education/education.html
+++ b/src/pages/education/education.html
@@ -79,7 +79,7 @@
 
         <ion-row>
           <ion-col>
-            <button ion-button icon-left clear small (click)="edit($event, card)">
+            <button ion-button icon-left clear small (click)="edit(card)">
               <ion-icon name="create"></ion-icon>
               <div>Edit</div>
             </button>
