--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -49,13 +49,13 @@
             </ion-row>
           </ion-item>
 
-          <ion-item class="job-dates">
+          <ion-item>
             <ion-row>
               <ion-col text-left>
                 <p>Start Date</p>
               </ion-col>
               <ion-col text-right>
-                <p>{{ card.start_date | date:"MMM dd, yyyy" }}</p>
+                <p>{{ card.start_date }}</p>
               </ion-col>
             </ion-row>
             <ion-row *ngIf="card.end_date">
@@ -63,7 +63,7 @@
                 <p>End Date</p>
               </ion-col>
               <ion-col text-right>
-                <p>{{ card.end_date | date:"MMM dd, yyyy" }}</p>
+                <p>{{ card.end_date }}</p>
               </ion-col>
             </ion-row>
           </ion-item>
