prototyped working date formatter (job history)

--- a/src/pages/education-detail/education-detail.html
+++ b/src/pages/education-detail/education-detail.html
@@ -43,7 +43,7 @@
       <ion-datetime
         class="editable-field"
         displayFormat="MMMM D, YYYY"
-        [(ngModel)]="obj.start_date"
+        [(ngModel)]="start_date"
         formControlName="start_date"
         name="start_date"></ion-datetime>
     </ion-item>
@@ -52,7 +52,7 @@
       <ion-datetime
         class="editable-field"
         displayFormat="MMMM D, YYYY"
-        [(ngModel)]="obj.end_date"
+        [(ngModel)]="end_date"
         formControlName="end_date"
         name="end_date"></ion-datetime>
     </ion-item>
