--- a/src/pages/certification-detail/certification-detail.html
+++ b/src/pages/certification-detail/certification-detail.html
@@ -36,7 +36,7 @@
       <ion-datetime
         class="editable-field"
         displayFormat="MMMM D, YYYY"
-        [(ngModel)]="obj.date_received"
+        [(ngModel)]="date_received"
         formControlName="date_received"
         name="date_received"></ion-datetime>
     </ion-item>
@@ -45,7 +45,7 @@
       <ion-datetime
         class="editable-field"
         displayFormat="MMMM D, YYYY"
-        [(ngModel)]="obj.expire_date"
+        [(ngModel)]="expire_date"
         formControlName="expire_date"
         name="expire_date"></ion-datetime>
     </ion-item>
