--- a/src/pages/jobhistory-detail/jobhistory-detail.html
+++ b/src/pages/jobhistory-detail/jobhistory-detail.html
@@ -45,7 +45,7 @@
       <ion-datetime
         class="editable-field"
         displayFormat="MMMM D, YYYY"
-        [(ngModel)]="obj.start_date"
+        [(ngModel)]="start_date"
         formControlName="start_date"
         name="start_date"></ion-datetime>
     </ion-item>
@@ -54,7 +54,7 @@
       <ion-datetime
         class="editable-field"
         displayFormat="MMMM D, YYYY"
-        [(ngModel)]="obj.end_date"
+        [(ngModel)]="end_date"
         formControlName="end_date"
         name="end_date"></ion-datetime>
     </ion-item>
@@ -81,7 +81,7 @@
     </ion-item>
     <button
       ion-button
-      type="submit" 
+      type="submit"
       block
       [disabled]="!formGroup.valid">Save</button>
   </form>
