--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -4,9 +4,9 @@
     <ion-slide>
 
       <ion-card>
-        <ion-card-header >
-          <div class="welcome-logo">
-            <img src="assets/img/agility360-logo-transparent-512x512.png" />
+        <ion-card-header class="welcome-logo">
+          <img src="assets/img/agility360-logo-transparent-512x512.png" />
+          <div >
           </div>
         </ion-card-header>
         <ion-card-content>
