--- a/src/pages/certifications/certifications.html
+++ b/src/pages/certifications/certifications.html
@@ -9,7 +9,7 @@
 
   <ion-navbar>
     <ion-title>Certifications</ion-title>
-    <ion-buttons start>
+    <ion-buttons end>
       <button ion-button icon-only (click)="add()">
         <ion-icon name="add"></ion-icon>
       </button>
