--- a/src/pages/education/education.html
+++ b/src/pages/education/education.html
@@ -10,7 +10,7 @@
 
   <ion-navbar>
     <ion-title>Education History</ion-title>
-    <ion-buttons start>
+    <ion-buttons end>
       <button ion-button icon-only (click)="add()">
         <ion-icon name="add"></ion-icon>
       </button>
