--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -8,7 +8,7 @@
 <ion-header>
   <ion-navbar>
     <ion-title>Job History</ion-title>
-    <ion-buttons start>
+    <ion-buttons end>
       <button ion-button icon-only (click)="add()">
         <ion-icon name="add"></ion-icon>
       </button>
