--- a/src/pages/news-detail/news-detail.html
+++ b/src/pages/news-detail/news-detail.html
@@ -21,20 +21,19 @@
     </ion-refresher-content>
   </ion-refresher>
 
-  <div *ngIf="posts">
-    <ion-list *ngFor="let post of posts">
-      <ion-card (click)="viewPost(post)">
-        <img src="{{ post.featured_media_url }}">
-        <ion-card-content>
-          <ion-card-title>
-            {{ post.title.rendered }}
-          </ion-card-title>
-          <p class="publish-date">{{ post.date | date:"MMM dd, yyyy" }}</p>
-        </ion-card-content>
-      </ion-card>
+  <div *ngIf="post">
+    <ion-card>
+      <img src="{{ post.featured_media_url }}">
+      <ion-card-content>
+        <ion-card-title>
+          {{ post.title.rendered }}
+        </ion-card-title>
+        <p class="publish-date">{{ post.date | date:"MMM dd, yyyy" }}</p>
+        <hr />
+        <p class="article" text-wrap [innerHtml]="post.content.rendered | safeHtml"></p>
+      </ion-card-content>
+    </ion-card>
 
-
-    </ion-list> <!-- *ngFor="let post of posts" -->
   </div> <!-- *ngIf="posts" -->
 
   <div *ngIf="errMess">
