--- a/src/pages/certification-detail/certification-detail.html
+++ b/src/pages/certification-detail/certification-detail.html
@@ -3,6 +3,18 @@
 
   <ion-navbar>
     <ion-title text-capitalize>{{ action }} Certification</ion-title>
+    <ion-buttons end>
+      <button
+        ion-button
+        icon-left
+        clear
+        small
+        [disabled]="!formGroup.valid"
+        (click)="processForm()">
+        <ion-icon name="create"></ion-icon>
+        <div>Save</div>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
@@ -10,7 +22,7 @@
 
 <ion-content padding class="app-background">
 
-  <form (ngSubmit)="processForm()" [formGroup]="formGroup">
+  <form [formGroup]="formGroup">
     <ion-item>
       <ion-label stacked class="form-label">Instituion Name</ion-label>
       <ion-input
@@ -59,11 +71,6 @@
         name="description"
         placeholder="Optional: provide us with a few sentences about this certification."></ion-textarea>
     </ion-item>
-    <button
-      ion-button
-      type="submit"
-      block
-      [disabled]="!formGroup.valid">Save</button>
   </form>
 
 </ion-content>
