--- a/src/pages/education-detail/education-detail.html
+++ b/src/pages/education-detail/education-detail.html
@@ -1,15 +1,25 @@
 <ion-header>
-
   <ion-navbar>
     <ion-title text-capitalize>{{ action }} Education History</ion-title>
+    <ion-buttons end>
+      <button
+        ion-button
+        icon-left
+        clear
+        small
+        [disabled]="!formGroup.valid"
+        (click)="processForm()">
+        <ion-icon name="create"></ion-icon>
+        <div>Save</div>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
 
 <ion-content padding class="app-background">
 
-  <form (ngSubmit)="processForm()" [formGroup]="formGroup">
+  <form [formGroup]="formGroup">
     <ion-item>
       <ion-label stacked class="form-label">Instituion Name</ion-label>
       <ion-input
@@ -65,11 +75,6 @@
         name="description"
         placeholder="Optional: provide us with a few sentences about this degree program."></ion-textarea>
     </ion-item>
-    <button
-      ion-button
-      type="submit"
-      block
-      [disabled]="!formGroup.valid">Save</button>
   </form>
 
 </ion-content>
