--- a/src/pages/terms-of-use/terms-of-use.html
+++ b/src/pages/terms-of-use/terms-of-use.html
@@ -34,12 +34,8 @@
 
         <ion-card-content>
           <ion-item>
-            <ion-row>
-              <ion-col>
-                <img src="{{ post.featured_media_url }}">
-              <div class="wordpress" text-wrap [innerHtml]="post.content.rendered | safeHtml"></div>
-              </ion-col>
-            </ion-row>
+            <img src="{{ post.featured_media_url }}">
+            <p class="wordpress" text-wrap [innerHtml]="post.content.rendered | safeHtml"></p>
           </ion-item>
         </ion-card-content>
 
