--- a/src/assets/terms-of-use.html
+++ b/src/assets/terms-of-use.html
@@ -75,6 +75,6 @@
     2828 E. Trinity Mills Rd.
     Suite 315
     Carrollton, TX 75006
-    support@agility360.net
+    <a href="mailto:support@agility360.net">support@agility360.net</a>
   </address>
 </section>
