repoint app logo to CDN

--- a/src/pages/forgot-password/forgot-password.html
+++ b/src/pages/forgot-password/forgot-password.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div text-center class="logo">
-    <img src="assets/img/agility360-logo-transparent-512x512.png" />
+    <img src="https://cdn.agility360app.net/" />
   </div>
   <form (submit)="resetPassword()">
     <strong><p class="error-message" *ngIf="errMsg" >{{errMsg}}</p></strong>
