--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -5,7 +5,7 @@
 
       <ion-card>
         <ion-card-header class="welcome-logo">
-          <img src="assets/img/agility360-logo-transparent-512x512.png" />
+          <img src="https://cdn.agility360app.net/" />
           <div >
           </div>
         </ion-card-header>
@@ -21,7 +21,7 @@
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="assets/img/agility360-logo-transparent-512x512.png" />
+            <img src="https://cdn.agility360app.net/" />
           </div>
         </ion-card-header>
         <ion-card-content>
@@ -35,7 +35,7 @@
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="assets/img/agility360-logo-transparent-512x512.png" />
+            <img src="https://cdn.agility360app.net/" />
           </div>
         </ion-card-header>
         <ion-card-content>
@@ -49,7 +49,7 @@
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="assets/img/agility360-logo-transparent-512x512.png" />
+            <img src="https://cdn.agility360app.net/" />
           </div>
         </ion-card-header>
         <ion-card-content>
