--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,8 +1,8 @@
 <ion-content class="app-background">
 
   <ion-slides pager="true" paginationType="bullets">
+    <!-- Slide 1 -->
     <ion-slide>
-
       <ion-card>
         <ion-card-header class="welcome-logo">
           <img src="https://cdn.agility360app.net/" />
@@ -15,8 +15,9 @@
 
       </ion-card>
       <img src="assets/img/arrow-right.png" class="right-arrow" />
-
     </ion-slide>
+
+    <!-- Slide 2 -->
     <ion-slide>
       <ion-card>
         <ion-card-header >
@@ -31,6 +32,8 @@
       </ion-card>
       <img src="assets/img/arrow-right.png" class="right-arrow" />
     </ion-slide>
+
+    <!-- Slide 3 -->
     <ion-slide>
       <ion-card>
         <ion-card-header >
@@ -45,6 +48,8 @@
       </ion-card>
       <img src="assets/img/arrow-right.png" class="right-arrow" />
     </ion-slide>
+
+    <!-- Slide 4 -->
     <ion-slide>
       <ion-card>
         <ion-card-header >
