--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -5,7 +5,7 @@
     <ion-slide>
       <ion-card>
         <ion-card-header class="welcome-logo">
-          <img src="https://cdn.agility360app.net/" />
+          <img src="assets/img/agility360-logo-transparent-512x512.png" />
           <div >
           </div>
         </ion-card-header>
@@ -14,7 +14,9 @@
         </ion-card-content>
 
       </ion-card>
-      <img src="assets/img/arrow-right.png" class="right-arrow" />
+      <div class="right-arrow">
+        <img src="assets/img/arrow-right.png"  />
+      </div>
     </ion-slide>
 
     <!-- Slide 2 -->
@@ -22,7 +24,7 @@
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="https://cdn.agility360app.net/" />
+            <img src="assets/img/agility360-logo-transparent-512x512.png" />
           </div>
         </ion-card-header>
         <ion-card-content>
@@ -38,7 +40,7 @@
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="https://cdn.agility360app.net/" />
+            <img src="assets/img/agility360-logo-transparent-512x512.png" />
           </div>
         </ion-card-header>
         <ion-card-content>
@@ -54,7 +56,7 @@
       <ion-card>
         <ion-card-header >
           <div class="welcome-logo">
-            <img src="https://cdn.agility360app.net/" />
+            <img src="assets/img/agility360-logo-transparent-512x512.png" />
           </div>
         </ion-card-header>
         <ion-card-content>
