--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div text-center class="logo">
-    <img src="https://cdn.agility360app.net/" />
+    <img src=appLogo />
   </div>
   <form (submit)="login()">
     <strong><p class="error-message" *ngIf="errMsg" >{{errMsg}}</p></strong>
