--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -12,11 +12,12 @@
         <ion-card-content>
           <h1>Stay connected to your recruiter</h1>
         </ion-card-content>
-
+        <ion-card-content>
+          <div class="right-arrow">
+            <img src="assets/img/arrow-right.png"  />
+          </div>
+        </ion-card-content>
       </ion-card>
-      <div class="right-arrow">
-        <img src="assets/img/arrow-right.png"  />
-      </div>
     </ion-slide>
 
     <!-- Slide 2 -->
@@ -31,8 +32,12 @@
           <h1>Create your professional profile</h1>
           <p>shooby dooby do</p>
         </ion-card-content>
+        <ion-card-content>
+          <div class="right-arrow">
+            <img src="assets/img/arrow-right.png"  />
+          </div>
+        </ion-card-content>
       </ion-card>
-      <img src="assets/img/arrow-right.png" class="right-arrow" />
     </ion-slide>
 
     <!-- Slide 3 -->
@@ -47,8 +52,12 @@
           <h1>Find job opportunities</h1>
           <p>shooby dooby do</p>
         </ion-card-content>
+        <ion-card-content>
+          <div class="right-arrow">
+            <img src="assets/img/arrow-right.png"  />
+          </div>
+        </ion-card-content>
       </ion-card>
-      <img src="assets/img/arrow-right.png" class="right-arrow" />
     </ion-slide>
 
     <!-- Slide 4 -->
